--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -507,28 +507,28 @@ body {
     justify-content: space-between;
     margin-bottom: 80px;
 }
-input[type=radio] {
-    position: absolute;
-    visibility: hidden;
-}
-input[type=radio]:checked ~ .checkmark {
-  opacity: 1;
-}
+// input[type=radio] {
+//     position: absolute;
+//     visibility: hidden;
+// }
+// input[type=radio]:checked ~ .checkmark {
+//   opacity: 1;
+// }
 
-.custom-radio .checkmark {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffffff;
-    font-family: $robotoBold;
-    width: 166px;
-    height: 60px;
-    font-size: 18px;
-    border: 2px solid #ffffff;
-    border-radius: 60px;
-    cursor: pointer;
-    opacity: .5;
-}
+// .custom-radio .checkmark {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     color: #ffffff;
+//     font-family: $robotoBold;
+//     width: 166px;
+//     height: 60px;
+//     font-size: 18px;
+//     border: 2px solid #ffffff;
+//     border-radius: 60px;
+//     cursor: pointer;
+//     opacity: .5;
+// }
 // INPUT FIELD
 .field {
     width: 100%;
@@ -566,6 +566,7 @@ input[type=radio]:checked ~ .checkmark {
         color: #ffffff;
     }
 }
+
 input:focus + .field__label{
     bottom: calc(100% + 10px);
     font-size: 14px;
@@ -644,4 +645,495 @@ input[type="tel"] {
     line-height: 1.5;
 }
 @import 'theme/grid';
-@import 'theme/media';
+
+/* = MEDIA = */
+@media (orientation: landscape) and (max-width: 992px) {
+    .skr4t-start {
+      bottom: 5px !important;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center; 
+    }
+    .skr4t-start__text {
+      text-align: center !important; 
+    } 
+  }
+  @media screen and (max-width:1400px){
+    // VIDEO SWIPER
+    .swiper-1 {
+      .swiper-slide {
+        padding-right: 75px;
+      }
+      .swiper-button-prev{
+          width: 50px;
+          height: 50px;
+          left: 20px;
+          &::after {
+              height: 9px;
+              width: 24px;
+          }
+      }
+      .swiper-button-next{
+          width: 50px;
+          height: 50px;
+          right: 20px;
+          &::after {
+              height: 9px;
+              width: 24px;
+          }
+      }
+    }
+    .after-description {
+      max-width: 65%;
+      .button {
+        padding: 10px 5px;
+      }
+      .button__label {
+        font-size: 16px;
+      }
+    }
+    .after-description__title {
+      margin-bottom: 15px;
+      font-size: 1.45vw;
+    }
+    .after-description__item {
+      font-size: 1.35vw;
+      &:before{
+        top: 4px;
+      }
+    }
+  }
+  @media screen and (max-width:1200px){
+    .skr4t-information__title {
+      font-size: 16px;
+    }
+    .skr4t-information__subtitle {
+      font-size: 90px;
+    }
+    .skr4t-start__text {
+      font-size: 16px;
+    }
+    .text {
+      font-size: 30px;
+    }
+    .description {
+      padding-top: 50px;
+    }
+    .author__title {
+      font-size: 90px;
+      margin-bottom: 0;
+    }
+    .description-schema {
+      margin-bottom: 100px;
+    }
+    .description-whom__title {
+      font-size: 30px;
+      margin-bottom: 75px;
+      text-align: center;
+    }
+    .description-whom-item__label{ 
+      font-size: 24px;
+    }
+    .description-whom-item {
+      padding-bottom: 50px;
+    }
+    .description-whom-item__text {
+      font-size: 16px;
+    }
+    .author-description {
+      margin-bottom: 50px;
+    }
+    .author-description__photo {
+      height: 600px;
+    }
+    .author-description-wrapper__text {
+      margin-bottom: 25px;
+    }
+    .author-description-wrapper__background {
+      font-size: 30px;
+    }
+    .after__title {
+      font-size: 90px;
+    }
+    .registration__title{
+      font-size: 90px;
+    }
+  }
+  @media screen and (max-width:992px){
+    .header-navigation {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    .text {
+      max-width: 100%;
+      br {
+        display: none;
+      }
+    }
+    .text__title {
+      display: block;
+      width: inherit;
+    }
+    .description-schema-image {
+      height: 200px;
+      margin-right: 50px;
+    }
+    .author .text {
+      margin-bottom: 25px;
+    }
+    .author__title {
+      font-size: 75px;
+    }
+    .author-wrapper {
+      padding-top: 100px;
+      padding-bottom: 100px;
+    }
+    .author-description {
+      flex-direction: column;
+      align-items: center;
+    }
+    .author-description__photo {
+      margin-bottom: 25px;
+      height: 350px;
+      width: 350px;
+      border-radius: 50%;
+      object-position: top;
+    }
+    .author-description-wrapper {
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      .button {
+        margin-top: 25px;
+      }
+    }
+    .author-description-wrapper__name {
+      margin-bottom: 20px;
+    }
+    .author-description-wrapper__text {
+      text-align: left;
+      margin-bottom: 10px;
+    }
+    .author-description-wrapper__background {
+      margin-bottom: 10px;
+      &.bg-1 {
+        align-self: flex-start;
+      }
+      &.bg-2 {
+        align-self: center;
+      }
+    }
+    .video {
+      background: transparent;
+      height: 380px;
+      width: 90%;
+      margin: 0 auto;
+    }
+    .after__title {
+      font-size: 75px;
+    }
+    .registration {
+      margin-bottom: 50px;
+    }
+    .registration__title {
+      font-size: 75px;
+    }
+    .registration-form {
+      max-width: 468px;
+    }
+    .radio-wrapper {
+      flex-wrap: wrap;
+      justify-content: space-around;
+      width: 100%;
+      margin-bottom: 50px;
+    }
+    .custom-radio {
+      width: 45%;
+      &:nth-child(1) {
+        margin-bottom: 10px;
+      }
+      &:nth-child(2) {
+        margin-bottom: 10px;
+      }
+    }
+    .custom-radio .checkmark {
+      font-size: 16px;
+      width: 100%; 
+    }
+    // SWIPER VIDEO
+    .swiper-1 {
+      .swiper-slide {
+        padding-left: 75px;
+        padding-bottom: 10vw;
+        padding-top: 10vw;
+        &::before {
+          background: rgba(0,0,0, .8);
+        }
+      }
+    }
+    .swiper-button-prev {
+      top: 30px;
+    }
+    .swiper-button-next {
+      top: 30px;
+    }
+    .after-description {
+      padding-left: 10px;
+      max-width: 100%;
+      .button {
+        padding: 10px 5px;
+      }
+      .button__label {
+        font-size: 14px;
+      }
+    }
+    .after-description__title {
+      font-size: 16px;
+    }
+    .after-description__item {
+      font-size: 14px;
+    }
+  }
+  @media screen and (max-width:768px){
+    .header-navigation {
+      padding-top:10px;
+      padding-bottom:10px;
+      .button{
+        padding:10px;
+      }
+      .button__label{ 
+        font-size: 14px;
+        margin-right: 5px;
+      }
+    }
+    .navigation-logo{
+      font-size: 10px;
+      span{
+        font-size: 18px;
+      }
+    }
+    .skr4t-information__title {
+      font-size: 11px;
+    }
+    .skr4t-information__subtitle {
+      font-size: 45px;
+    }
+    .skr4t-start{
+      left: 0;
+      right: inherit;
+      bottom: 100px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .skr4t-start__text {
+      font-size: 14px;
+      text-align: center;
+    }
+    .text {
+      font-size: 24px;
+    }
+    .description {
+      padding-top: 0;
+      .text {
+        margin-bottom: 25px;
+      }
+    }
+    .description-schema{
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 50px;
+    }
+    .description-schema-image{
+      height: 200px;
+      margin-right: 0;
+      object-fit: inherit;
+      margin-bottom: 25px;
+    }
+    .description-schema-text__details {
+      margin-bottom: 15px;
+    }
+    .description-whom__title{
+      padding-top: 25px;
+      margin-bottom: 25px;
+      font-size: 22px;
+    }
+    .description-whom-item__label{
+      font-size: 18px;
+    }
+    .description-whom-item__text {
+      font-size: 14px;
+    }
+    .author__title{
+      font-size: 50px;
+    }
+    .author-description {
+      margin-bottom: 15px;
+    }
+    .author-description__photo{
+      height: 250px;
+      width: 250px;
+    }
+    .after__title {
+      font-size: 50px;
+    }
+    .video {
+      height: 280px;
+    }
+    .registration {
+      padding-left: 5px;
+      padding-right: 5px;
+      .button {
+        padding-top: 15px;
+        padding-bottom: 15px;
+      }
+      .button__label{
+        font-size: 16px;
+      }
+    }
+    .custom-radio .checkmark {
+      height: 50px;
+    }
+    .registration__title{
+      font-size: 50px;
+    }
+    .registration__subtitle{
+      font-size: 20px;
+      margin-bottom: 50px;
+    }
+    .field {
+      margin-bottom: 40px;
+    }
+    .field__label{
+      font-size: 18px;
+    }
+    .field__input{
+      font-size: 16px;
+    }
+    .footer {
+      padding: 25px 0 25px 0;
+    }
+    .footer-wrapper {
+      justify-content: space-around;
+      .button__label {
+        font-size: 18px;
+      }
+    }
+  }
+  @media screen and (max-width:667px){}
+  @media screen and (max-width:640px){}
+  @media screen and (max-width:568px){
+    .text {
+      font-size: 18px;
+    }
+    .text__title {
+      font-size: 12px;
+    }
+    .description{
+      padding-bottom: 50px;
+    }
+    .description-schema-text__details{
+      font-size: 14px;
+      svg {
+        transform: translateY(0);
+      }
+    }
+    .description-schema-text__quotes{
+      font-size: 16px;
+    }
+    .description-whom__title{
+        font-size: 20px;
+        text-align: center;
+    }
+    .author-wrapper{
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+    .author__title {
+      font-size: 40px;
+    }
+    .author-description-wrapper__background{
+      font-size: 20px;
+      span{
+        font-size: 14px;
+      }
+    }
+    .after{
+      margin-bottom: 50px;
+    }
+    .video {
+      width: 100%;
+      height: 60vw;
+    }
+    .after__title{
+      font-size: 40px;
+    }
+    .registration__title{
+      font-size: 40px;
+    }
+    .registration__subtitle{
+      font-size: 14px;
+    }
+  }
+  @media screen and (max-width:480px){
+    // SWIPER VIDEO
+    .swiper-1 {
+      .swiper-slide {
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 15vw;
+        padding-bottom: 15vw;
+      }
+      .swiper-button-prev{
+        width: 35px;
+        height: 35px;
+      }
+      .swiper-button-next{
+        width: 35px;
+        height: 35px;
+      }
+    }
+    .after-description__title{
+      margin-bottom: 8px;
+    }
+    .after-description__item{
+      padding-left: 13px;
+      margin-bottom: 5px;
+    }
+    .after-description{
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
+  @media screen and (max-width:414px){
+    .description-whom-item {
+      padding-bottom: 25px;
+      border-width: 1px;
+    }
+    .description-whom-item__label{
+      font-size: 16px;
+    }
+    .description-whom-item__text{
+      font-size: 12px;
+    }
+  }
+  @media screen and (max-width:380px){
+    .skr4t-information__subtitle {
+      font-size: 35px;
+    }
+  }
+  @media screen and (max-width:360px){
+    .skr4t-start__text{
+      br {
+        display: none;
+      }
+    }
+  }
+  @media screen and (max-width:320px){}
+  /* = MEDIA END = */
